--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -263,6 +263,14 @@ msgctxt "Languages::mwl_xlsx.allowed_usergroups"
 msgid "User groups allowed for media lists"
 msgstr "Группы пользователей, которым разрешён доступ к mwl lists"
 
+msgctxt "Languages::mwl_xlsx.setting.linkify_feature_urls"
+msgid "Convert URLs in feature values to links"
+msgstr "Преобразовывать URL в ссылку в значениях характеристик"
+
+msgctxt "Languages::mwl_xlsx.setting.linkify_feature_urls.desc"
+msgid "Automatically detect web addresses in product feature values and make them clickable."
+msgstr "Автоматически находить веб-адреса в значениях характеристик товара и делать их кликабельными."
+
 msgctxt "Languages::mwl_xlsx.login_to_view_price"
 msgid "Log in to view price"
 msgstr "Войдите, чтобы увидеть цену"
