--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -281,6 +281,34 @@ msgctxt "Languages::mwl_xlsx.setting.linkify_feature_urls.desc"
 msgid "Automatically detect web addresses in product feature values and make them clickable."
 msgstr "Automatically detect web addresses in product feature values and make them clickable."
 
+msgctxt "Languages::mwl_xlsx.setting.format_feature_numbers"
+msgid "Format large feature numbers"
+msgstr "Format large feature numbers"
+
+msgctxt "Languages::mwl_xlsx.setting.format_feature_numbers.desc"
+msgid "Add thousands separators to numeric product feature values (1 000 → 1,000) on the storefront."
+msgstr "Add thousands separators to numeric product feature values (1 000 → 1,000) on the storefront."
+
+msgctxt "Languages::mwl_xlsx.setting.show_price_hint"
+msgid "Show price tooltip"
+msgstr "Show price tooltip"
+
+msgctxt "Languages::mwl_xlsx.setting.show_price_hint.desc"
+msgid "Append an info icon next to prices that explains what the amount includes."
+msgstr "Append an info icon next to prices that explains what the amount includes."
+
+msgctxt "Languages::mwl_xlsx.setting.auto_detect_language"
+msgid "Auto-detect storefront language"
+msgstr "Auto-detect storefront language"
+
+msgctxt "Languages::mwl_xlsx.setting.auto_detect_language.desc"
+msgid "Redirect new visitors to the language that matches their browser preferences."
+msgstr "Redirect new visitors to the language that matches their browser preferences."
+
+msgctxt "Languages::mwl_xlsx.price_hint_text"
+msgid "The price includes:<br>Placement fee in the publication, coordination of the text with the editorial office, and compliance monitoring of technical requirements (author, date, etc.)."
+msgstr "The price includes:<br>Placement fee in the publication, coordination of the text with the editorial office, and compliance monitoring of technical requirements (author, date, etc.)."
+
 msgctxt "Languages::mwl_xlsx.login_to_view_price"
 msgid "Log in to view price"
 msgstr "Log in to view price"
