--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -738,3 +738,43 @@ msgctxt "Languages::mwl_xlsx.publish_down_limit_exceeded"
 msgid "Too many stale products ([count]) to publish down. Limit is [limit]."
 msgstr "Too many stale products ([count]) to publish down. Limit is [limit]."
 
+msgctxt "Languages::mwl_xlsx.delete_unused_products_table_missing"
+msgid "Skipping [table]: table not found."
+msgstr "Skipping [table]: table not found."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_empty"
+msgid "Products table is empty, nothing to delete."
+msgstr "Products table is empty, nothing to delete."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_summary"
+msgid "Unused products scan — total: [total], referenced: [referenced], candidates: [candidates]."
+msgstr "Unused products scan — total: [total], referenced: [referenced], candidates: [candidates]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_none"
+msgid "No unused products detected."
+msgstr "No unused products detected."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_skip"
+msgid "Product #[product_id] is still referenced in [sources]."
+msgstr "Product #[product_id] is still referenced in [sources]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_deleted"
+msgid "Product #[product_id] deleted."
+msgstr "Product #[product_id] deleted."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_error"
+msgid "Failed to delete product #[product_id]."
+msgstr "Failed to delete product #[product_id]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_result"
+msgid "Deletion results — deleted: [deleted], skipped: [skipped], errors: [errors]."
+msgstr "Deletion results — deleted: [deleted], skipped: [skipped], errors: [errors]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_deleted_list"
+msgid "Deleted product IDs: [ids]."
+msgstr "Deleted product IDs: [ids]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_errors_list"
+msgid "Failed product IDs: [ids]."
+msgstr "Failed product IDs: [ids]."
+
