--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -724,6 +724,10 @@ msgctxt "Languages::mwl_xlsx.delete_unused_products_summary"
 msgid "Unused products scan — total: [total], referenced: [referenced], candidates: [candidates]."
 msgstr "Проверка неиспользуемых товаров — всего: [total], задействованы: [referenced], кандидаты: [candidates]."
 
+msgctxt "Languages::mwl_xlsx.delete_unused_products_dry_run_enabled"
+msgid "Dry-run mode enabled: no products will be deleted."
+msgstr "Режим сухого прогона: товары удаляться не будут."
+
 msgctxt "Languages::mwl_xlsx.delete_unused_products_none"
 msgid "No unused products detected."
 msgstr "Неиспользуемые товары не найдены."
@@ -740,13 +744,25 @@ msgctxt "Languages::mwl_xlsx.delete_unused_products_error"
 msgid "Failed to delete product #[product_id]."
 msgstr "Не удалось удалить товар #[product_id]."
 
+msgctxt "Languages::mwl_xlsx.delete_unused_products_dry_run_entry"
+msgid "Product #[product_id] would be deleted (dry run)."
+msgstr "Товар #[product_id] был бы удалён (сухой прогон)."
+
 msgctxt "Languages::mwl_xlsx.delete_unused_products_result"
 msgid "Deletion results — deleted: [deleted], skipped: [skipped], errors: [errors]."
 msgstr "Итог удаления — удалено: [deleted], пропущено: [skipped], ошибок: [errors]."
 
+msgctxt "Languages::mwl_xlsx.delete_unused_products_dry_run_result"
+msgid "Dry run results — planned deletions: [planned], skipped: [skipped], errors: [errors]."
+msgstr "Итог сухого прогона — запланировано к удалению: [planned], пропущено: [skipped], ошибок: [errors]."
+
 msgctxt "Languages::mwl_xlsx.delete_unused_products_deleted_list"
 msgid "Deleted product IDs: [ids]."
 msgstr "Удалённые ID товаров: [ids]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_dry_run_list"
+msgid "Products that would be deleted: [ids]."
+msgstr "Товары, которые были бы удалены: [ids]."
 
 msgctxt "Languages::mwl_xlsx.delete_unused_products_errors_list"
 msgid "Failed product IDs: [ids]."
