--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -712,3 +712,59 @@ msgctxt "Languages::mwl_xlsx.publish_down_limit_exceeded"
 msgid "Too many stale products ([count]) to publish down. Limit is [limit]."
 msgstr "Слишком много устаревших товаров ([count]) для отключения. Ограничение — [limit]."
 
+msgctxt "Languages::mwl_xlsx.delete_unused_products_table_missing"
+msgid "Skipping [table]: table not found."
+msgstr "Пропускаем [table]: таблица не найдена."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_empty"
+msgid "No disabled products found, nothing to delete."
+msgstr "Отключённые товары не найдены, удалять нечего."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_summary"
+msgid "Unused disabled products scan — total disabled: [disabled_total], referenced disabled: [referenced_disabled], candidates: [candidates]."
+msgstr "Проверка отключённых товаров — всего отключено: [disabled_total], задействованы среди них: [referenced_disabled], кандидаты: [candidates]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_dry_run_enabled"
+msgid "Dry-run mode enabled: no products will be deleted."
+msgstr "Режим сухого прогона: товары удаляться не будут."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_none"
+msgid "No unused products detected."
+msgstr "Неиспользуемые товары не найдены."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_skip"
+msgid "Product #[product_id] is still referenced in [sources]."
+msgstr "Товар #[product_id] всё ещё связан в [sources]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_deleted"
+msgid "Product #[product_id] deleted."
+msgstr "Товар #[product_id] удалён."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_error"
+msgid "Failed to delete product #[product_id]."
+msgstr "Не удалось удалить товар #[product_id]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_dry_run_entry"
+msgid "Product #[product_id] would be deleted (dry run)."
+msgstr "Товар #[product_id] был бы удалён (сухой прогон)."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_result"
+msgid "Deletion results — deleted: [deleted], skipped: [skipped], errors: [errors]."
+msgstr "Итог удаления — удалено: [deleted], пропущено: [skipped], ошибок: [errors]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_dry_run_result"
+msgid "Dry run results — planned deletions: [planned], skipped: [skipped], errors: [errors]."
+msgstr "Итог сухого прогона — запланировано к удалению: [planned], пропущено: [skipped], ошибок: [errors]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_deleted_list"
+msgid "Deleted product IDs: [ids]."
+msgstr "Удалённые ID товаров: [ids]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_dry_run_list"
+msgid "Products that would be deleted: [ids]."
+msgstr "Товары, которые были бы удалены: [ids]."
+
+msgctxt "Languages::mwl_xlsx.delete_unused_products_errors_list"
+msgid "Failed product IDs: [ids]."
+msgstr "ID товаров с ошибками: [ids]."
+
